--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,1 +1,5 @@
-<p>menu works!</p>
+<ul class="list-group">
+    <li *ngFor="let item of menu;" [routerLink]="item.ruta" routerLinkActive="active" class="list-group-item">
+        {{ item.texto }}
+    </li>
+</ul>
