--- a/src/app/graficas/components/grafica-barra/grafica-barra.component.html
+++ b/src/app/graficas/components/grafica-barra/grafica-barra.component.html
@@ -1,1 +1,5 @@
-<p>grafica-barra works!</p>
+<div class="chart-container">
+    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
+        [legend]="barChartLegend" [chartType]="barChartType">
+    </canvas>
+</div>
