Gráfica de Dona

--- a/src/app/graficas/pages/dona/dona.component.html
+++ b/src/app/graficas/pages/dona/dona.component.html
@@ -1,1 +1,7 @@
-<p>dona works!</p>
+<h1>Gráfica de dona</h1>
+<hr>
+
+<div class="grafica-container">
+    <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels"
+        [chartType]="doughnutChartType" [colors]="colors"></canvas>
+</div>
